--- a/PetworldOficial.Presentation/PetworldOficial.MVC/Views/Cart/Index.cshtml
+++ b/PetworldOficial.Presentation/PetworldOficial.MVC/Views/Cart/Index.cshtml
@@ -1,32 +1,8 @@
-﻿@model PetWorldOficial.Application.ViewModels.Cart.CartDetailsViewModel?
+﻿@model PetWorldOficial.Application.ViewModels.Cart.CartDetailsViewModel
 
 @{
     ViewData["Title"] = "Carrinho";
     Layout = "_Layout";
-}
-
-@if (TempData["ErrorMessage"] != null)
-{
-<div class="d-flex justify-content-center align-items-center">
-    <div class="col-md-12 alert alert-danger" role="alert">
-        @TempData["ErrorMessage"]
-        <button style="position: absolute; top: 0.7rem; right: 0; padding: 0.5rem 1rem;" type="button" class="btn-close"
-                data-bs-dismiss="alert" aria-label="Close">
-        </button>
-    </div>
-</div>
-}
-
-@if (TempData["SuccessMessage"] != null)
-{
-<div class="d-flex justify-content-center align-items-center">
-    <div class="col-md-12 alert alert-success" role="alert">
-        @TempData["SuccessMessage"]
-        <button style="position: absolute; top: 0.7rem; right: 0; padding: 0.5rem 1rem;" type="button" class="btn-close"
-                data-bs-dismiss="alert" aria-label="Close">
-        </button>
-    </div>
-</div>
 }
 
 <div class="d-flex justify-content-center align-items-center">
@@ -37,7 +13,7 @@
 <section class="my-5">
     <div class="container">
         <h2 class="cart-title text-center mb-4">Carrinho de Compras</h2>
-        @if (Model != null && Model?.Items is not null && Model.Items.Any())
+        @if (Model.Items is not null && Model.Items.Any())
         {
             <div class="row">
                 <div class="col-lg-8">
@@ -82,7 +58,7 @@
                                 </li>
                                 <li class="list-group-item d-flex justify-content-between">
                                     <span>Sub-Total</span>
-                                    <strong class="cart-sub-total-price">R$ 10,00</strong>
+                                    <strong class="cart-sub-total-price">@Model.SubTotal.ToString("C")</strong>
                                 </li>
                                 <li class="list-group-item d-flex justify-content-between">
                                     <span>Total</span>
@@ -157,7 +133,7 @@
                     if (response.success) {
                         // Se a operação for bem-sucedida, atualiza o preço total
                         $totalPrice.text('R$ ' + response.totalPrice.toFixed(2));
-                        $subTotalPrice.text('R$ ' + (response.totalPrice - 10).toFixed(2));
+                        $subTotalPrice.text('R$ ' + response.subTotalPrice.toFixed(2));
                     }
                 },
                 error: function() {
