--- a/PetworldOficial.Presentation/PetworldOficial.MVC/Views/Product/Create.cshtml
+++ b/PetworldOficial.Presentation/PetworldOficial.MVC/Views/Product/Create.cshtml
@@ -37,7 +37,7 @@
 
         <div class="col-md-8">
             <label asp-for="@Model.Quantity" class="form-label">Quantidade <span style="color: red;">*</span></label>
-            <input asp-for="@Model.Quantity" type="text" class="form-control shadow-none" placeholder="Preço">
+            <input asp-for="@Model.Quantity" type="text" class="form-control shadow-none" placeholder="Digite a quantidade">
             <span asp-validation-for="Quantity" class="text-danger"></span>
         </div>
 
