--- a/PetworldOficial.Presentation/PetworldOficial.MVC/Views/Supplier/Index.cshtml
+++ b/PetworldOficial.Presentation/PetworldOficial.MVC/Views/Supplier/Index.cshtml
@@ -59,7 +59,7 @@
                                         src="/Images/supplier_7988637.png"
                                         alt="Imagem fornecedor"
                                         class="img-fluid me-4"
-                                        style="width: 100px; object-fit: cover"/>
+                                        style="width: 150px; height: 150px; object-fit: cover; border-radius: 5px;"/>
                                     <div>
                                         <h5 class="card-title supplier-name">@supplier!.Id - @supplier.Name</h5>
                                         <p class="card-text">
@@ -71,8 +71,16 @@
                                     </div>
                                 </div>
                                 <div class="d-flex flex-column">
-                                    <a href="@Url.Action("Update", "Supplier", new { id = supplier.Id })" class="btn btn-warning mb-2">Editar</a>
-                                    <a href="@Url.Action("Delete", "Supplier", new { id = supplier.Id })" class="btn btn-danger">Deletar</a>
+                                    <a href="@Url.Action("Update", "Supplier", new { id = supplier.Id })"
+                                       class="btn btn-warning mb-2 d-flex align-items-center justify-content-center"
+                                       style="border-radius: 10px;">
+                                        <i class="fas fa-edit me-2"></i> Editar
+                                    </a>
+                                    <a href="@Url.Action("Delete", "Supplier", new { id = supplier.Id })"
+                                       class="btn btn-danger d-flex align-items-center justify-content-center"
+                                       style="border-radius: 10px;">
+                                        <i class="fas fa-trash me-2"></i> Deletar
+                                    </a>
                                 </div>
                             </div>
                         </div>
