--- a/PetworldOficial.Presentation/PetworldOficial.MVC/Views/Animal/Delete.cshtml
+++ b/PetworldOficial.Presentation/PetworldOficial.MVC/Views/Animal/Delete.cshtml
@@ -9,11 +9,11 @@
     var gender = (EGender)Enum.Parse(typeof(EGender), Model.Gender);
 }
 
-<div class="container-fluid text-black py-3">
+<div class="container-fluid py-3">
     <br>
-    <h2 class="display-6 text-center fw">
-        <img src="/Images/DadosDoPet.png" alt="">
-    </h2>
+    <h1 class="text-center">
+        Dados do Pet
+    </h1>
     <br>
 </div>
 
@@ -37,6 +37,28 @@
             </div>
         </div>
     }
+
+    <div class="d-flex justify-content-center align-items-center">
+        @if (Model.ImageUrl != null)
+        {
+            <div class="d-flex justify-content-center align-items-center" style="overflow: hidden">
+                <img style="width: min-content; height: 250px; object-fit: cover; border-radius: 5px" src="/Images/@Model.ImageUrl"
+                     class="card-img-top"
+                     alt="...">
+            </div>
+        }
+        else
+        {
+            <div class="d-flex justify-content-center align-items-center" style="overflow: hidden">
+                <img style="width: min-content; height: 250px;  object-fit: cover; border-radius: 5px"
+                     src="/Images/PetImage.jpg"
+                     class="card-img-top"
+                     alt="...">
+            </div>
+        }
+    </div>
+    <br>
+
     <form class="row g-3 d-flex justify-content-center align-items-center" enctype="multipart/form-data" asp-controller="Animal" asp-action="Delete" method="post">
         <input type="hidden" asp-for="@Model.Id">
         <input type="hidden" asp-for="@Model.UserId">
