--- a/PetworldOficial.Presentation/PetworldOficial.MVC/Views/Home/Index.cshtml
+++ b/PetworldOficial.Presentation/PetworldOficial.MVC/Views/Home/Index.cshtml
@@ -51,25 +51,17 @@ else if (TempData["SuccessMessage"] != null)
     <div class="carousel-inner">
         <!-- Single item -->
         <div class="carousel-item active">
-            <img src="https://mdbcdn.b-cdn.net/img/Photos/Slides/img%20(22).webp" class="d-block w-100" alt="Sunset Over the City"/>
+            <img src="Images/Banner1PetWorld.jpeg" class="d-block w-100" alt="Sunset Over the City"/>
         </div>
 
         <!-- Single item -->
         <div class="carousel-item">
-            <img src="https://mdbcdn.b-cdn.net/img/Photos/Slides/img%20(22).webp" class="d-block w-100" alt="Canyon at Nigh"/>
-            <div class="carousel-caption d-none d-md-block">
-                <h5>Second slide label</h5>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-            </div>
+            <img src="Images/Banner2PetWorld.jpeg" class="d-block w-100" alt="Canyon at Nigh"/>
         </div>
 
         <!-- Single item -->
         <div class="carousel-item">
-            <img src="https://mdbcdn.b-cdn.net/img/Photos/Slides/img%20(23).webp" class="d-block w-100" alt="Cliff Above a Stormy Sea"/>
-            <div class="carousel-caption d-none d-md-block">
-                <h5>Third slide label</h5>
-                <p>Praesent commodo cursus magna, vel scelerisque nisl consectetur.</p>
-            </div>
+            <img src="Images/Banner3PetWorld.jpeg" class="d-block w-100" alt="Cliff Above a Stormy Sea"/>
         </div>
     </div>
 
