--- a/PetworldOficial.Presentation/PetworldOficial.MVC/Views/Service/Create.cshtml
+++ b/PetworldOficial.Presentation/PetworldOficial.MVC/Views/Service/Create.cshtml
@@ -49,7 +49,7 @@ else if (TempData["SuccessMessage"] != null)
 
         <div class="col-md-8">
             <label asp-for="@Model.DurationInMinutes" class="form-label">Duração em minutos <span style="color: red;">*</span></label>
-            <input asp-for="@Model.DurationInMinutes" type="text" class="form-control shadow-none" placeholder="Digite o preço">
+            <input asp-for="@Model.DurationInMinutes" type="text" class="form-control shadow-none" placeholder="Digite a duração em minutos">
             <span asp-validation-for="@Model.DurationInMinutes" class="text-danger"></span>
         </div>
 
