--- a/PetworldOficial.Presentation/PetworldOficial.MVC/Views/User/Index.cshtml
+++ b/PetworldOficial.Presentation/PetworldOficial.MVC/Views/User/Index.cshtml
@@ -76,8 +76,14 @@ else if (TempData["SuccessMessage"] != null)
                             </div>
                         </div>
                         <div class="d-flex flex-column">
-                            <a href="@Url.Action("Update", "User", new { id = user.Id })" class="btn btn-warning mb-2">Editar</a>
-                            <a href="@Url.Action("Delete", "User", new { id = user.Id })" class="btn btn-danger">Deletar</a>
+                            <a href="@Url.Action("Update", "User", new { id = user.Id })"
+                               class="btn btn-warning mb-2 d-flex align-items-center justify-content-center" style="border-radius: 10px;">
+                                <i class="fas fa-edit me-2"></i> Editar
+                            </a>
+                            <a href="@Url.Action("Delete", "User", new { id = user.Id })"
+                               class="btn btn-danger d-flex align-items-center justify-content-center" style="border-radius: 10px;">
+                                <i class="fas fa-trash me-2"></i> Deletar
+                            </a>
                         </div>
                     </div>
                 </div>
